# qobuz-dl

./: .gitignore  README.md  debug_core.py  debug_filepath.py  debug_path.py  flatten_downloads.py  main.py  pyproject.toml  qbdl.bat  qobuz-dl.spec  reproduce_issue.py
.github/workflows/: build.yml
qobuz_dj/: __init__.py  cli.py  commands.py  core.py  downloader.py  gui.py  metadata.py  utils.py  version.py
qobuz_dl/: cli.py  commands.py  core.py  downloader.py  metadata.py  qopy.py  utils.py
tests/: test_core.py  test_metadata.py  test_pyright_fixes.py  test_utils.py
