[project]
name = "qobuz-dl"
version = "0.9.9.10"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "mutagen>=1.47.0",
    "pathvalidate>=3.3.1",
    "pick>=2.4.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[tool.pyright]
include = ["qobuz_dl", "tests"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
    "poethepoet>=0.24.0",
    "pyinstaller>=6.4.0",
]

[tool.poe.tasks]
check = ["_check_ruff", "_check_pyright"]
_check_ruff = "ruff check ."
_check_pyright = "pyright"
test = "pytest"
build = ["check", "test", "server-build"]
server-build = "pyinstaller --onefile --name qobuz-dl main.py"
