[project]
name = "qobuz-dj"
version = "1.0.0-alpha2"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "mutagen>=1.47.0",
    "pathvalidate>=3.3.1",
    "pick>=2.4.0",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.scripts]
qobuz-dj = "qobuz_dl.cli:main"
qobuz-dj-gui = "qobuz_dj.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["qobuz_dl"]

[tool.pyright]
include = ["qobuz_dl", "tests"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
    "poethepoet>=0.24.0",
    "pyinstaller>=6.4.0",
]

[tool.poe.tasks]
check = ["_check_ruff", "_check_pyright"]
_check_ruff = "ruff check ."
_check_pyright = "pyright"
test = "pytest"
build = ["check", "test", "server-build", "gui-build"]
server-build = "pyinstaller --onefile --name qobuz-dj main.py"
gui-build = "pyinstaller --onefile --windowed --name qobuz-dj-gui qobuz_dj/gui.py"
